##Text encoding: utf-8

2011-11-11  Jean Bréfort  <jean.brefort@normalesup.org>
	* Makefile.am: drop GConf support.
	* gchemutils.schemas.in: ditto.
	* plugins/paint/arrows/Makefile.am: ditto.
	* plugins/paint/arrows/gchempaint-arrows.schemas.in: ditto.
	* programs/crystal/Makefile.am: ditto.
	* programs/crystal/gcrystal.schemas.in: ditto.
	* programs/paint/Makefile.am: ditto.
	* programs/paint/gchempaint.schemas.in: ditto.

2011-11-09  Jean Bréfort  <jean.brefort@normalesup.org>
	* goffice/gchemutils.cc: add support for CIF files.
	* goffice/gogcrystalapp.cc: ditto.
	* libs/gcr/atom.cc: serialize effective radius ratio.
	* libs/gcr/document.cc: fix crasher.
	* libs/gcr/document.h: remove local dialogs list.
	* libs/gcu/spacegroup.cc: don't add too many atoms.

2011-11-07  Jean Bréfort  <jean.brefort@normalesup.org>
	* goffice/gchemutils-priv.h: enhance content type support.
	* goffice/gchemutils.cc: ditto.
	* goffice/gogchem3dapp.h: ditto.
	* goffice/gogcpapp.h: ditto.
	* goffice/gogcrystalapp.h: ditto.
	* goffice/gogcuapp.h: ditto.

2011-11-06  Jean Bréfort  <jean.brefort@normalesup.org>
	* goffice/Makefile.am: add a window class for 3d views.
	* goffice/gogchem3dapp.cc: implement load data.
	* goffice/gogchem3dapp.h: fixed class declaration.
	* goffice/gogchem3dwin.cc: add a window class for 3d views.
	* goffice/gogchem3dwin.h: ditto.
	* goffice/plugin.xml.in: support chemical/x-xyz at the print level.

2011-11-05  Jean Bréfort  <jean.brefort@normalesup.org>
	* goffice/gogcrystalapp.cc: fixed various issues in component.
	* libs/gcr/application.cc: ditto.
	* libs/gcr/document.cc: ditto.

2011-11-04  Jean Bréfort  <jean.brefort@normalesup.org>
	* goffice/gchemutils.cc: don't duplicate applications.
	* libs/gcu/chem3ddoc.cc: moved string to/from display mode here.
	* libs/gcu/chem3ddoc.h: ditto.
	* libs/gcugtk/chem3dwindow.cc: more work for the goffice plugin.
	* libs/gcugtk/chem3dwindow.h: ditto.