@@ -1,5 +1,4 @@
 [encoding: UTF-8]
-gchemutils.schemas.in
 gchemutils.xml.in
 database/residues.xml.in
 database/elements.xml.in
@@ -10,6 +9,9 @@ database/radii.xml.in
 gnumeric/functions.cc
 gnumeric/plugin.xml.in
 goffice/plugin.xml.in
+goffice/gchemutils.cc
+goffice/gogchem3dapp.cc
+goffice/gogchem3dwin.cc
 goffice/gogcpapp.cc
 goffice/gogcpwin.cc
 goffice/gogcrystalwin.cc
@@ -18,6 +20,7 @@ libs/gcp/arrow.cc
 libs/gcp/application.cc
 libs/gcp/atom.cc
 libs/gcp/bond.cc
+libs/gcp/brackets.cc
 libs/gcp/docprop.cc
 libs/gcp/electron.cc
 libs/gcp/fontsel.cc
@@ -35,18 +38,20 @@ libs/gcp/reaction-arrow.cc
 libs/gcp/reaction-operator.cc
 libs/gcp/reaction-prop.cc
 libs/gcp/reaction-step.cc
-libs/gcp/stringdlg.cc
 libs/gcp/text.cc
 libs/gcp/theme.cc
 libs/gcp/view.cc
 libs/gcp/window.cc
+libs/gcr/application.cc
 libs/gcr/atomsdlg.cc
 libs/gcr/celldlg.cc
 libs/gcr/cleavagesdlg.cc
+libs/gcr/docprop.cc
 libs/gcr/document.cc
 libs/gcr/grid.cc
 libs/gcr/linesdlg.cc
 libs/gcr/view.cc
+libs/gcr/window.cc
 libs/gcu/application.cc
 libs/gcu/atom.cc
 libs/gcu/bond.cc
@@ -63,15 +68,19 @@ libs/gcu/object.cc
 libs/gcu/spacegroup.cc
 libs/gcu/value.cc
 libs/gcugtk/application.cc
+libs/gcugtk/chem3dapplication.cc
+libs/gcugtk/chem3dwindow.cc
 libs/gcugtk/dialog.cc
 libs/gcugtk/filechooser.cc
 libs/gcugtk/gcuchem3dviewer.cc
 libs/gcugtk/gcucomboperiodic.c
 libs/gcugtk/gcuperiodic.c
+libs/gcugtk/molecule.cc
 libs/gcugtk/print-setup-dlg.cc
 libs/gcugtk/printable.cc
 libs/gcugtk/spectrumdoc.cc
 libs/gcugtk/spectrumview.cc
+libs/gcugtk/stringdlg.cc
 libs/gcugtk/ui-builder.cc
 plugins/loaders/cdx/cdx.cc
 plugins/loaders/cdx/plugin.xml.in
@@ -87,7 +96,6 @@ plugins/loaders/nuts/plugin.xml.in
 plugins/paint/arrows/arrowtool.cc
 [type: gettext/glade]plugins/paint/arrows/arrowtool.ui
 [type: gettext/glade]plugins/paint/arrows/curvedarrowtool.ui
-plugins/paint/arrows/gchempaint-arrows.schemas.in
 plugins/paint/arrows/org.gnome.gchemutils.paint.plugins.arrows.gschema.xml.in.in
 plugins/paint/arrows/plugin.cc
 plugins/paint/arrows/retrosynthesis.cc
@@ -132,15 +140,12 @@ programs/3d/gchem3d.desktop.in
 programs/calc/gchemcalc.cc
 programs/calc/gchemcalc.desktop.in
 programs/crystal/gcrystal.desktop.in
-programs/crystal/gcrystal.schemas.in
 programs/crystal/application.cc
-programs/crystal/docprop.cc
 programs/crystal/document.cc
 programs/crystal/main.cc
 programs/crystal/window.cc
 programs/crystal/x-gcrystal.desktop.in
 programs/paint/gchempaint.desktop.in
-programs/paint/gchempaint.schemas.in
 programs/paint/main.cc
 programs/paint/standaloneapp.cc
 programs/paint/x-gchempaint.desktop.in
@@ -162,23 +167,23 @@ templates/paint/templates.xml.in
 [type: gettext/glade]ui/calc/gchemcalc.ui
 [type: gettext/glade]ui/crystal/bonds.ui
 [type: gettext/glade]ui/crystal/cell.ui
-[type: gettext/glade]ui/crystal/docprop.ui
 [type: gettext/glade]ui/crystal/prefs.ui
 [type: gettext/glade]ui/crystal/view-settings.ui
 [type: gettext/glade]ui/crystal/atoms.ui
 [type: gettext/glade]ui/crystal/cleavages.ui
+[type: gettext/glade]ui/crystal/docprop.ui
 [type: gettext/glade]ui/crystal/lines.ui
 [type: gettext/glade]ui/crystal/size.ui
 [type: gettext/glade]ui/libgcu/gcuperiodic.ui
 [type: gettext/glade]ui/libgcu/image-size.ui
 [type: gettext/glade]ui/libgcu/image-resolution.ui
 [type: gettext/glade]ui/libgcu/print-setup.ui
+[type: gettext/glade]ui/libgcu/stringinputdlg.ui
 [type: gettext/glade]ui/paint/arrow-object.ui
 [type: gettext/glade]ui/paint/docprop.ui
 [type: gettext/glade]ui/paint/H-pos.ui
 [type: gettext/glade]ui/paint/newfiledlg.ui
 [type: gettext/glade]ui/paint/preferences.ui
-[type: gettext/glade]ui/paint/stringinputdlg.ui
 [type: gettext/glade]ui/paint/tools.ui
 [type: gettext/glade]ui/paint/zoom.ui
 [type: gettext/glade]ui/table/acidity.ui
